--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" style="background: rgba(255, 255, 255, 0.1); padding: 20px;">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body style="background: black;">
+  <body style="background: rgb(28, 28, 28); border-radius: 20px; margin: 20px;">
     <div id="root"></div>
     <script src="./react.js"></script>
   </body>
